# satysfi-easytable

./: .gitpod.yml  HISTORY.md  LICENSE  README-ja.md  README.md  Satyristes  entrypoint.sh  satysfi-easytable-doc.opam  satysfi-easytable.opam
demo/: demo.saty
doc/: easytable-manual.saty  easytable-manual.satysfi-aux  easytable.saty  easytable.satysfi-aux
src/: easyeqn.satyh  easytable-dirtyhack.satyh  easytable.satyh  matrix.satyg  table-builder.satyh
