opam-version: "2.0"
name: "satysfi-easytable"
version: "2.0.0"
synopsis: "A SATySFi package to build simple tables"
description: """A SATySFi package to build simple tables."""

maintainer: "Shinichi Mogami <mogassy@yahoo.co.jp>"
authors: "Shinichi Mogami <mogassy@yahoo.co.jp>"
license: "MIT"
homepage: "https://github.com/monaqa/satysfi-easytable"
bug-reports: "https://github.com/monaqa/satysfi-easytable/issues"
dev-repo: "git+https://github.com/monaqa/satysfi-easytable.git"

depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-dist"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "easytable"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]

